--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "expo-supabase-4",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +16,8 @@
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
     "react-native-url-polyfill": "^2.0.0",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "expo-updates": "~0.24.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
