--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
       "package": "io.expo.client"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     }
   }
 }
