--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@supabase/supabase-js": "^2.39.3",
     "expo": "~50.0.6",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.10",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
+    "react-native-reanimated": "~3.6.2",
     "react-native-url-polyfill": "^2.0.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-updates": "~0.24.10"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
