--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "@supabase/supabase-js": "^2.39.3",
     "expo": "~50.0.6",
     "expo-image-picker": "~14.7.1",
@@ -19,6 +21,8 @@
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
     "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.1"
   },
