--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "expo-supabase-4",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.18",
-    "@supabase/supabase-js": "^2.39.3",
-    "expo": "~50.0.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.10",
-    "nativewind": "^4.0.1",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-elements": "^3.4.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "tailwindcss": "^3.4.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+    "name": "expo-supabase-4",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "expo start --dev-client",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "1.21.0",
+        "@react-navigation/native": "^6.1.10",
+        "@react-navigation/native-stack": "^6.9.18",
+        "@supabase/supabase-js": "^2.39.3",
+        "expo": "~50.0.6",
+        "expo-image-picker": "~14.7.1",
+        "expo-status-bar": "~1.11.1",
+        "expo-updates": "~0.24.10",
+        "nativewind": "^4.0.1",
+        "react": "18.2.0",
+        "react-native": "0.73.4",
+        "react-native-elements": "^3.4.3",
+        "react-native-reanimated": "~3.6.2",
+        "react-native-safe-area-context": "4.8.2",
+        "react-native-screens": "~3.29.0",
+        "react-native-url-polyfill": "^2.0.0",
+        "tailwindcss": "^3.4.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@types/react": "~18.2.45",
+        "prettier": "3.2.5",
+        "typescript": "^5.1.3"
+    },
+    "private": true
 }
