--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@supabase/supabase-js": "^2.39.3",
+    "@tamagui/config": "^1.90.2",
     "expo": "~50.0.6",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
@@ -23,7 +24,8 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "tamagui": "^1.90.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
