--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.10",
+    "immer": "^10.0.3",
     "nativewind": "^4.0.33",
     "react": "18.2.0",
     "react-native": "0.73.4",
