--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@supabase/supabase-js": "^2.39.3",
     "@tamagui/config": "^1.90.2",
-    "expo": "~50.0.6",
+    "expo": "~50.0.7",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.10",
+    "expo-updates": "~0.24.11",
     "immer": "^10.0.3",
     "nativewind": "^4.0.33",
     "react": "18.2.0",
