--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@supabase/supabase-js": "^2.39.3",
-    "@tamagui/config": "^1.90.2",
+    "@tamagui/config": "^1.90.6",
+    "@tamagui/lucide-icons": "^1.90.6",
     "expo": "^50.0.7",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.10.3",
@@ -28,8 +29,9 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "tamagui": "^1.90.2",
+    "tamagui": "^1.90.6",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
