--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.23.9",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@supabase/supabase-js": "^2.39.3",
     "@tamagui/config": "^1.90.6",
+    "@tamagui/font-inter": "^1.90.6",
     "@tamagui/lucide-icons": "^1.90.6",
     "expo": "^50.0.7",
     "expo-app-loading": "^2.1.1",
@@ -25,6 +27,7 @@
     "nativewind": "^4.0.33",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-css-interop": "^0.0.34",
     "react-native-elements": "^3.4.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
