--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx}\" --config \".prettierrc\""
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
