--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "prettier": "prettier --write \"src/**/*.{ts,tsx}\" --config \".prettierrc\""
+    "prettier": "prettier --write \"src/**/*.{ts,tsx}\" --config \".prettierrc\"",
+    "test": "jest"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  },  
   "dependencies": {
     "@babel/runtime": "^7.23.9",
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -39,7 +46,9 @@
     "react-native-svg": "^14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tamagui": "^1.90.7",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.1",
+    "jest-expo": "~50.0.2",
+    "jest": "^29.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
