--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "setupFiles": [
+      "./jestSetupFile.js"
     ]
-  },  
+  },
   "dependencies": {
     "@babel/runtime": "^7.23.9",
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -35,6 +38,8 @@
     "expo-status-bar": "~1.11.1",
     "expo-updates": "^0.24.11",
     "immer": "^10.0.3",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.2",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -46,12 +51,11 @@
     "react-native-svg": "^14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tamagui": "^1.90.7",
-    "zustand": "^4.5.1",
-    "jest-expo": "~50.0.2",
-    "jest": "^29.3.1"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
+    "@testing-library/react-native": "^12.4.3",
     "@types/react": "~18.2.58",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
