--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-supabase-4",
-    "slug": "expo-supabase-4",
+    "name": "Pickup!",
+    "slug": "Pickup!",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/pickup-logo.png",
