--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "burnt": "^0.12.2",
     "expo": "^50.0.7",
     "expo-app-loading": "^2.1.1",
+    "expo-dev-client": "~3.3.9",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
+    "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "^0.24.11",
     "immer": "^10.0.3",
@@ -52,8 +54,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tamagui": "^1.90.7",
-    "zustand": "^4.5.1",
-    "expo-dev-client": "~3.3.9"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
