--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react": "~18.2.58",
     "jest": "^29.7.0",
     "prettier": "3.2.5",
+    "react-native-dotenv": "^3.4.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
