--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native": "0.73.4",
     "react-native-css-interop": "^0.0.34",
     "react-native-elements": "^3.4.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.6.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
