--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
     "setupFiles": [
-      "./jestSetupFile.js"
+      "./jest.setup.js"
     ]
   },
   "dependencies": {
@@ -56,11 +56,13 @@
     "react-native-svg": "^14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tamagui": "^1.90.7",
+    "ts-jest": "^29.1.2",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.58",
     "jest": "^29.7.0",
     "prettier": "3.2.5",
