--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.4",
+    "@react-email/components": "^0.0.16",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "^7.6.4",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -58,7 +59,8 @@
     "react-native-svg": "^14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tamagui": "^1.94.4",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-sms": "~11.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
