--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "resend": "^3.2.0",
     "tamagui": "^1.94.4",
+    "text-encoding": "^0.7.0",
+    "web-streams-polyfill": "^4.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
